--- a/style.css
+++ b/style.css
@@ -60,14 +60,39 @@ body {
 }
 
 .about-me {
+  position: relative;
   padding-top: 140px;
-  padding-bottom: 50px;
-  line-height: 2;
-  width: 65%;
+  padding-bottom: 100px;
+   line-height: 2;
+  width: 75%;
   text-align: center;
   margin: auto;
 }
-
+.about-me .scroll-down {
+    position: absolute;
+    left: 50%;
+    bottom: 30px;
+    height: 30px;
+    width: 30px;
+    margin-left: -15px;
+    animation: scrollDown 2s ease infinite;
+}
+@keyframes scrollDown{
+   0%,20%,50%,80%,100%{
+   	transform: translateY(0);
+   }
+   40%{
+   	transform: translateY(-30px);
+   }
+   60%{
+   	transform: translateY(-15px);
+   }
+}
+.about-me .scroll-down img {
+    width: 25px;
+    display: block;
+    margin: 2px auto;
+}
 /* Start Skill Section */
 .skills {
   background-color: #EEE;
