--- a/style.css
+++ b/style.css
@@ -68,6 +68,7 @@ body {
   text-align: center;
   margin: auto;
 }
+/* Scroll down */
 .about-me .scroll-down {
     position: absolute;
     left: 50%;
